pr-env/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
  namespace: namespace
spec:
  selector:
    app: selector
  ports:
  - port: 1000
    targetPort: 1000
