pr-env/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: namespace
spec:
  rules:
  - host: pr-env.flou.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: service
            port: 
              number: 1000
